@@ -1825,7 +1825,7 @@ if $gpg; then
   # Import the test keys.
   $GPG --import - <<EOF >>$LOGFILE 2>&1
 -----BEGIN PGP PUBLIC KEY BLOCK-----
-Version: GnuPG v1.4.2 (GNU/Linux)
+Version: GnuPG v1.4.3 (BSD/OS)
 
 mQGiBENKukgRBADJERMkgpE7Uo+ZahIZ8rsgnhyiRtn96SQFumeBuclUcRIbT/XK
 2Qt1vvzd/QtunFP+U/V2sZHpt4e4dkXUNMssmTO8bZZgJJnhHkVTzEtMVY+qIfvC
@@ -1838,22 +1838,22 @@ SUhzA/9MsX9FwkruhbMti9nOuSBV9tqsEM+8vWjSJ+hlSviWCkFWV0De8yHiTq6m
 BOs4lsvBnTKk9f7Jyg5BzrXT9ukVPfeyTVi3I49+1TV/BMk2ubRuQ1ZTIFRlc3Qg
 U2NyaXB0IChUaGlzIHNlY3JldCBrZXkgaXMgcHVibGljIGFuZCB1c2VkIGZvciB0
 ZXN0aW5nIHNpZ25lZCBjb21taXRzIHdpdGggQ1ZTLikgPGJ1Zy1jdnNAbm9uZ251
-Lm9yZz6IYAQTEQIAIAUCQ0q6SAIbAwYLCQgHAwIEFQIIAwQWAgMBAh4BAheAAAoJ
-EI4MLH7xM73pnmQAn36k+iNEi+fdfFxoWNdB8DPIzOY8AKCWVfBZa/jAH64FaQYL
-ls1jFXLbELkCDQRDSrpbEAgAm3FjA6iU71Dm/iJy+RoI5T7MIZeiz6vpIg1IA0Ch
-h2lSaEbPxNAImRQyz+KNyMPofIA/DsS5rAHmMfTXFQf5JWrnotaVokHY3ucnPU7y
-vZGiYR+DJNbSThCRW+sgxYSUQLXPsIGQ4/MnI2rJO+y8RIRvGQYi63OpkTzsGAAO
-vfi42ui6SAfEvKQ73KvzF/lf5a9NokmM+nDkFzOJCfSFitY4KD/UmL62fq5TadGT
-mPscQF+DZ+V1txxN+xcnXJAG3OiOkDsKRap8sY4kG8WSG0vPCVdm+O4xzTQY/JQe
-aCs4le1J5nR4OKcmEnojlOZqPA4oZ52mXGFxBLHevvzokwADBQf/TJVH/iFqjbKx
-28Sw7aB4iYmE5P7+mCQcDmJERR1DJI8/awU/5kLSIETGKsXuAA/V9NPPAyd/AKve
-ulwLqjFEFNyFU3Vm1CAL6EcSw+Km2MseaUqA8MJCEyCd3NKc66Evarf+0G7iFV7h
-xJDnzUfhhaZBULPDBVgJ6AqNjC7tQm0EsBuGKxDIlxBQ+skO/nrI9vX6dwbEtBDs
-ClnpLOGebqZZArGsv0xEpfjMq/qPnwy53jEQYk5hxvLUHy4wZlIHD0SE9Q+kAElp
-9NE6IxKOqRR6vLs3m9833BMeGsIIbY8oBPAOd6BVbdGxLsGMX/FVGRhvExZX8k6C
-iqU/6EnlkYhJBBgRAgAJBQJDSrpbAhsMAAoJEI4MLH7xM73p/wMAnRvt70NgB6st
-B0RRhW3h2s/P7BCMAKDKqifj54oz/mJotQABGP13nW/gOA==
-=7ufq
+Lm9yZz6IWAQTEQIAGAIbAwIeAQIXgAUCRHS3OwILAgIVAgIWAAAKCRCODCx+8TO9
+6dLkAKCrOulThyphfnF5wTPrLvfhlXkbjwCfc4wmFkbxQ1IsfvQPHxh87LoceVi5
+Ag0EQ0q6WxAIAJtxYwOolO9Q5v4icvkaCOU+zCGXos+r6SINSANAoYdpUmhGz8TQ
+CJkUMs/ijcjD6HyAPw7EuawB5jH01xUH+SVq56LWlaJB2N7nJz1O8r2RomEfgyTW
+0k4QkVvrIMWElEC1z7CBkOPzJyNqyTvsvESEbxkGIutzqZE87BgADr34uNroukgH
+xLykO9yr8xf5X+WvTaJJjPpw5BcziQn0hYrWOCg/1Ji+tn6uU2nRk5j7HEBfg2fl
+dbccTfsXJ1yQBtzojpA7CkWqfLGOJBvFkhtLzwlXZvjuMc00GPyUHmgrOJXtSeZ0
+eDinJhJ6I5TmajwOKGedplxhcQSx3r786JMAAwUH/0yVR/4hao2ysdvEsO2geImJ
+hOT+/pgkHA5iREUdQySPP2sFP+ZC0iBExirF7gAP1fTTzwMnfwCr3rpcC6oxRBTc
+hVN1ZtQgC+hHEsPiptjLHmlKgPDCQhMgndzSnOuhL2q3/tBu4hVe4cSQ581H4YWm
+QVCzwwVYCegKjYwu7UJtBLAbhisQyJcQUPrJDv56yPb1+ncGxLQQ7ApZ6Szhnm6m
+WQKxrL9MRKX4zKv6j58Mud4xEGJOYcby1B8uMGZSBw9EhPUPpABJafTROiMSjqkU
+ery7N5vfN9wTHhrCCG2PKATwDnegVW3RsS7BjF/xVRkYbxMWV/JOgoqlP+hJ5ZGI
+SQQYEQIACQUCQ0q6WwIbDAAKCRCODCx+8TO96f8DAJ9CnJg/ewM3MoWqO1AY+KSS
+MJkCGgCeI8vv810E1G+CB2xyFA1/6G+hv7k=
+=80v1
 -----END PGP PUBLIC KEY BLOCK-----
 EOF
 
